data/test/type_check/pass/instantiation_3.v
// Ordered parameter connections

module foo();
  parameter x = 0;
  parameter y = 1;
endmodule

foo #(1,2) f();

initial $finish;
