data/test/type_check/fail/assign_1.v
wire x;
assign x[1] = 0;
initial $display("hello world!");
initial $finish;
